# homeassistant-danfoss_ecl_modbus

./: .gitignore  .ruff.toml  AGENTS.md  README.md  hacs.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: release-drafter.yml
.github/workflows/: hacs.yaml  hassfest.yaml  lint_and_test.yaml  release.yaml  test.yaml
custom_components/danfoss_ecl_modbus/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  hub.py  manifest.json  sensor.py  switch.py
custom_components/danfoss_ecl_modbus/tests/: conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_hub.py  test_sensor.py  test_switch.py
custom_components/danfoss_ecl_modbus/tests/tests/: test_binary_sensor.py
tests/: conftest.py  test_config_flow.py
