[project]
name = "danfoss-ecl-modbus"
version = "0.1.0"
requires-python = ">=3.13.2"
dependencies = [
    "pymodbus==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.300",
    "pytest-asyncio",
    "pytest-cov",
    "sqlalchemy",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C", "B", "pylint"
]
ignore = [
    "E203", # whitespace-before-punctuation
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "W0212", # protected-access
    "E1101", # no-member
    "R0903", # too-few-public-methods
    "W0621", # redefined-outer-name
    "W0613", # unused-argument
    "W0223", # abstract-method
    "E1123", # unexpected-keyword-arg
]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
# Disable the misc error category for lambda type inference issues
disable_error_code = ["misc"]
exclude = [".venv", "config"]

[tool.pytest.ini_options]
testpaths = ["custom_components/danfoss_ecl_modbus/tests"]
asyncio_mode = "auto"
