[project]
name = "danfoss-ecl-modbus"
version = "0.1.0"
requires-python = ">=3.13.2"
dependencies = [
    "pymodbus==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.300",
    "pytest-asyncio",
    "pytest-cov",
    "sqlalchemy",
    "ruff",
    "mypy",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
explicit_package_bases = true
# Disable the misc error category for lambda type inference issues
disable_error_code = ["misc"]
exclude = [".venv", "config"]

[tool.pytest.ini_options]
testpaths = ["custom_components/danfoss_ecl_modbus/tests"]
asyncio_mode = "auto"
